added section text and class name

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <header>
+            <div class="container">
+                <p>Header</p>
+            </div> 
         </header>
             
         <nav>
@@ -22,12 +25,21 @@
         </nav>
 
         <aside>
+            <div class="container">
+                <p>Sidebar</p>
+            </div>
         </aside>
 
         <main>
+            <div class="container">
+                <p>Main Content</p>
+            </div>
         </main>
 
         <footer>
+            <div class="container">
+                <p>Footer</p>
+            </div>
         </footer>
         
     </body>
