added scss for broad layout and bem naming

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -8,39 +8,38 @@
         <title>Assignment 05 - CSS Grid</title>
     </head>
     <body>
-        <header>
+        <header class="header">
             <div class="container">
                 <p>Header</p>
             </div> 
         </header>
             
-        <nav>
-            <ul>
-                <li>Nav Item</li>
-                <li>Nav Item</li>
-                <li>Nav Item</li>
-                <li>Nav Item</li>
-                <li>Nav Item</li>
+        <nav class="navbar">
+            <ul class="navbar__list">
+                <li class="navbar__item">Nav Item</li>
+                <li class="navbar__item">Nav Item</li>
+                <li class="navbar__item">Nav Item</li>
+                <li class="navbar__item">Nav Item</li>
+                <li class="navbar__item">Nav Item</li>
             </ul>
         </nav>
 
-        <aside>
+        <aside class="aside">
             <div class="container">
                 <p>Sidebar</p>
             </div>
         </aside>
 
-        <main>
+        <main class="main">
             <div class="container">
                 <p>Main Content</p>
             </div>
         </main>
 
-        <footer>
+        <footer class="footer">
             <div class="container">
                 <p>Footer</p>
             </div>
         </footer>
-        
     </body>
 </html>
