added responsive grid

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -8,38 +8,41 @@
         <title>Assignment 05 - CSS Grid</title>
     </head>
     <body>
-        <header class="header">
-            <div class="container">
-                <p>Header</p>
-            </div> 
-        </header>
+        <div class="grid">
+            <header class="header">
+                <div class="container">
+                    <p>Header</p>
+                </div> 
+            </header>
             
-        <nav class="navbar">
-            <ul class="navbar__list">
-                <li class="navbar__item">Nav Item</li>
-                <li class="navbar__item">Nav Item</li>
-                <li class="navbar__item">Nav Item</li>
-                <li class="navbar__item">Nav Item</li>
-                <li class="navbar__item">Nav Item</li>
-            </ul>
-        </nav>
+            <nav class="navbar">
+                <ul class="navbar__list">
+                    <li class="navbar__item">Nav Item</li>
+                    <li class="navbar__item">Nav Item</li>
+                    <li class="navbar__item">Nav Item</li>
+                    <li class="navbar__item">Nav Item</li>
+                    <li class="navbar__item">Nav Item</li>
+                </ul>
+            </nav>
 
-        <aside class="aside">
-            <div class="container">
-                <p>Sidebar</p>
-            </div>
-        </aside>
+            <aside class="aside">
+                <div class="container">
+                    <p>Sidebar</p>
+                </div>
+            </aside>
 
-        <main class="main">
-            <div class="container">
-                <p>Main Content</p>
-            </div>
-        </main>
+            <main class="main">
+                <div class="container">
+                    <p>Main Content</p>
+                </div>
+            </main>
 
-        <footer class="footer">
-            <div class="container">
-                <p>Footer</p>
-            </div>
-        </footer>
+            <footer class="footer">
+                <div class="container">
+                    <p>Footer</p>
+                </div>
+            </footer>
+        </div>
+        
     </body>
 </html>
