added content and adjusted layout

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -11,7 +11,7 @@
         <div class="grid">
             <header class="header">
                 <div class="container">
-                    <p>Header</p>
+                    <h1>Header</h1>
                 </div> 
             </header>
             
@@ -26,20 +26,25 @@
             </nav>
 
             <aside class="aside">
+                <h2>Sidebar</h2>
                 <div class="container">
-                    <p>Sidebar</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis minus accusamus aperiam impedit ducimus magnam corporis velit voluptas harum vel cupiditate, eius dolorum nostrum provident animi earum officia deleniti doloremque tempore quaerat quibusdam pariatur quae quisquam! Blanditiis, ipsa molestias.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima, sint praesentium. Esse doloremque aspernatur similique quae accusamus expedita iure, suscipit, rem animi laboriosam porro consequatur quaerat! Est suscipit quidem, harum sapiente culpa beatae voluptates, veritatis explicabo iure, minus in enim?</p>
                 </div>
             </aside>
 
             <main class="main">
+                <h2>Main Content</h2>
                 <div class="container">
-                    <p>Main Content</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates maiores, possimus fuga libero quasi cum magnam dignissimos eligendi nostrum facilis.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente, dolorem quam maxime delectus optio obcaecati eum ipsam iure impedit ullam accusamus 
+                        error quos? Temporibus repellat illo, maxime totam sequi, voluptate quibusdam deleniti incidunt omnis dignissimos voluptates esse magni necessitatibus. Sequi ducimus debitis, qui excepturi vero voluptatem ea architecto cupiditate, voluptas doloremque assumenda obcaecati unde blanditiis rerum, repellendus reiciendis quasi!</p>
                 </div>
             </main>
 
             <footer class="footer">
                 <div class="container">
-                    <p>Footer</p>
+                    <h3>Footer</h3>
                 </div>
             </footer>
         </div>
