added text modifier and more content

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -17,11 +17,16 @@
             
             <nav class="navbar">
                 <ul class="navbar__list">
-                    <li class="navbar__item">Nav Item</li>
-                    <li class="navbar__item">Nav Item</li>
-                    <li class="navbar__item">Nav Item</li>
-                    <li class="navbar__item">Nav Item</li>
-                    <li class="navbar__item">Nav Item</li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="#">Nav Item</a></li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="#">Nav Item</a></li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="#">Nav Item</a></li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="#">Nav Item</a></li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="#">Nav Item</a></li>
                 </ul>
             </nav>
 
@@ -43,8 +48,10 @@
             </main>
 
             <footer class="footer">
+                <h2>Footer</h2>
                 <div class="container">
-                    <h3>Footer</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </footer>
         </div>
