--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home/Landing Page</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Images Page</a></li>
-                <li class="nav-item"><a class="nav-link" href="accordian-page.html">Accordian Page</a></li>
+                <li class="nav-item"><a class="nav-link" href="accordion-page.html">Accordion Page</a></li>
                 <li class="nav-item"><a class="nav-link" href="grid-page.html">Grid Page</a></li>
             </ul>
         </nav>
