--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -24,8 +24,21 @@
                 <li class="nav-item"><a class="nav-link" href="grid-page.html">Grid Page</a></li>
             </ul>
         </nav>
-        <main class="main">
-          
+        <main class="main container">
+            <!--Add jumbotron that takes up entire width with secondary color for background-->
+            <div class="jumbotron jumbotron-fluid bg-secondary">
+                <!--create jumbotron container with top margin of 2 and padding 2-->
+                <div class="container mt-2 p-2">
+                    <hl class="display-4">jumbo Title</hl>
+                    <!--create top margin of 2 text and emphasize text with "lead"-->
+                    <p class="lead mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium debitis facere, 
+                        vitae in iste beatae quidem repudiandae optio dignissimos eos cupiditate suscipit 
+                        explicabo nihil atque et molestias, ratione maxime repellat eaque exercitationem quaerat 
+                        ipsa similique excepturi voluptatibus. Quibusdam placeat blanditiis sunt modi quas recusandae, 
+                        saepe laboriosam ea facilis. Pariatur reiciendis beatae quod atque quas inventore unde assumenda 
+                        debitis incidunt itaque.</p>
+                </div>
+            </div>
         </main>
         <footer>
             <h4 class="text-center fixed-bottom">Footer Info</h4>
