added comments to grid page

--- a/03-Bootstrap/assignment/grid-page.html
+++ b/03-Bootstrap/assignment/grid-page.html
@@ -24,9 +24,12 @@
                 <li class="nav-item"><a class="nav-link" href="grid-page.html">Grid Page</a></li>
             </ul>
         </nav>
+        <!--Added "container to give page side margins"-->
         <main class="main container">
+            <!--create grid row with blue background-->
             <div class="row bg-primary">
                 <h2>First Container Title</h2>
+                <!--create 4 equal sized columns with centered text that become stacked when screen size is "medium" or smaller-->
                 <div class="col-md-3">
                     <h3 class="text-center">col 1</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt accusamus numquam tenetur 
@@ -51,8 +54,11 @@
                 </div>
             </div>
 
+            <!--create another grid row with background color of blue2-->
             <div class="row bg-info">
                 <h2>Second Container Title</h2>
+                <!--create 3 columns 2 of equal size and centered text and half the size of the first column
+                    become stacked when screen is "large" or smaller-->
                 <div class="col-lg-6">
                     <h3>col 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti incidunt vitae modi 
@@ -71,8 +77,10 @@
                     <p>Lorem ipsum dolor sit</p>
                 </div>
             </div>
+            <!--Create another grid row with background of yellow-->
             <div class="row bg-warning">
                 <h2>Third Container Title</h2>
+                <!--create 2 equal sized columns that become stacked when screen size is "small" or smaller-->
                 <div class="col-sm-6">
                     <h3>col 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti incidunt vitae modi 
