--- a/03-Bootstrap/assignment/grid-page.html
+++ b/03-Bootstrap/assignment/grid-page.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark"> 
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home/Landing Page</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Images Page</a></li>
+                <li class="nav-item"><a class="nav-link" href="images-page.html">Images Page</a></li>
                 <li class="nav-item"><a class="nav-link" href="accordion-page.html">Accordion Page</a></li>
                 <li class="nav-item"><a class="nav-link" href="grid-page.html">Grid Page</a></li>
             </ul>
