updated footer for each

--- a/03-Bootstrap/assignment/grid-page.html
+++ b/03-Bootstrap/assignment/grid-page.html
@@ -95,8 +95,12 @@
             </div>  
 
         </main>
-        <footer class="bg-light">
-            <h4 class="text-center fixed-bottom">Footer Info</h4>
+        <footer class="footer bg-light">
+            <h4 class="text-center">Footer Info</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
+                et odit laudantium a impedit nesciunt autem? Exercitationem cum laborum repudiandae animi. Neque, repudiandae 
+                nihil a molestias natus corporis vero culpa praesentium provident optio aspernatur! Accusantium ipsam quis, 
+                voluptas ut laborum perferendis. Quas, quidem modi?</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
