--- a/03-Bootstrap/assignment/images-page.html
+++ b/03-Bootstrap/assignment/images-page.html
@@ -48,21 +48,29 @@
                     <img src="https://images.pexels.com/photos/276374/pexels-photo-276374.jpeg?auto=compress&cs=tinysrgb&w=1200" class="d-block w-100" alt="...">
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#myFirstCarousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" 
+                        type="button" 
+                        data-bs-target="#myFirstCarousel" 
+                        data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#myFirstCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" 
+                        type="button" 
+                        data-bs-target="#myFirstCarousel" 
+                        data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-              </div> 
-
-
-
+            </div>
+            
         </main>
-        <footer class="bg-light">
-            <h4 class="text-center fixed-bottom">Footer Info</h4>
+        <footer class="footer bg-light">
+            <h4 class="text-center">Footer Info</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
+                et odit laudantium a impedit nesciunt autem? Exercitationem cum laborum repudiandae animi. Neque, repudiandae 
+                nihil a molestias natus corporis vero culpa praesentium provident optio aspernatur! Accusantium ipsam quis, 
+                voluptas ut laborum perferendis. Quas, quidem modi?</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
