--- a/03-Bootstrap/assignment/images-page.html
+++ b/03-Bootstrap/assignment/images-page.html
@@ -51,14 +51,20 @@
                 <button class="carousel-control-prev" 
                         type="button" 
                         data-bs-target="#myFirstCarousel" 
-                        data-bs-slide="prev">
+                        data-bs-slide="prev"
+                        data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Previous Picture">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" 
                         type="button" 
                         data-bs-target="#myFirstCarousel" 
-                        data-bs-slide="next">
+                        data-bs-slide="next"
+                        data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Next Picture">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
