--- a/03-Bootstrap/assignment/images-page.html
+++ b/03-Bootstrap/assignment/images-page.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Assignment 06 - Bootstrap 4 - grid</title>
     </head>
-    <body>
+    <body class="d-flex flex-column min-vh-100">
         <header class="bg-light">
             <h1>Website Name</h1>
         </header>
@@ -71,7 +71,7 @@
             </div>
             
         </main>
-        <footer class="footer bg-light">
+        <footer class="footer bg-light mt-auto">
             <h4 class="text-center">Footer Info</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
                 et odit laudantium a impedit nesciunt autem? Exercitationem cum laborum repudiandae animi. Neque, repudiandae 
