--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -26,9 +26,9 @@
         </nav>
         <main class="main container">
             <!--Add jumbotron that takes up entire width with secondary color for background-->
-            <div class="jumbotron jumbotron-fluid bg-secondary">
+            <div class="jumbotron jumbotron-fluid bg-info">
                 <!--create jumbotron container with top margin of 2 and padding 2-->
-                <div class="container mt-2 p-2">
+                <div class="container mt-5 p-2">
                     <hl class="display-4">jumbo Title</hl>
                     <!--create top margin of 2 text and emphasize text with "lead"-->
                     <p class="lead mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium debitis facere, 
@@ -38,6 +38,36 @@
                         saepe laboriosam ea facilis. Pariatur reiciendis beatae quod atque quas inventore unde assumenda 
                         debitis incidunt itaque.</p>
                 </div>
+            </div>
+            <div class="container d-flex justify-content-evenly mt-5 mb-5">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Title</h5>
+                      <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, debitis.</p>
+                      <a href="#" class="btn btn-primary">Link Button</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Title</h5>
+                      <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, debitis.</p>
+                      <a href="#" class="btn btn-primary">Link Button</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Title</h5>
+                      <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, debitis.</p>
+                      <a href="#" class="btn btn-primary">Link Button</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Title</h5>
+                      <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, debitis.</p>
+                      <a href="#" class="btn btn-primary">Link Button</a>
+                    </div>
+                  </div>
             </div>
         </main>
         <footer class="footer bg-light mt-auto">
