--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -39,7 +39,7 @@
                         debitis incidunt itaque.</p>
                 </div>
             </div>
-            <div class="container d-flex justify-content-evenly mt-5 mb-5">
+            <div class="container d-flex justify-content-evenly mt-5 mb-5 flex-wrap gap-3">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">Title</h5>
