--- a/03-Bootstrap/assignment/accordion-page.html
+++ b/03-Bootstrap/assignment/accordion-page.html
@@ -8,6 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Assignment 06 - Bootstrap 4 - Accordian</title>
     </head>
+    <!--make the entire body element a flex container with a column direction
+    make the body height 100 percent of the veiwport height so the footer will be at the bottom of page-->
     <body class="d-flex flex-column min-vh-100">
         <header>
             <h1>Website Name</h1>
@@ -25,18 +27,23 @@
             </ul>
         </nav>
         <main class="main">
+            <!--create accordian parent with id to reference in each child-->
             <div class="accordion" id="myFirstAccordion">
+                <!--create first accordian collapse-->
                 <div class="accordion-item">
                   <h2 class="accordion-header">
+                    <!--create button to make the accordian content visible
+                    expanded false so it is not automatically expanded-->
                     <button class="accordion-button collapsed" 
                             type="button" 
                             data-bs-toggle="collapse" 
                             data-bs-target="#collapseOne" 
-                            aria-expanded="true" 
+                            aria-expanded="false" 
                             aria-controls="collapseOne">
                       Accordion #1
                     </button>
                   </h2>
+                  <!--the content that will be visible when button above if clicked -->
                   <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#myFirstAccordion">
                     <div class="accordion-body">
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam voluptatem provident tempore ducimus 
@@ -44,8 +51,11 @@
                     </div>
                   </div>
                 </div>
+                <!--create second accordian collapse-->
                 <div class="accordion-item">
                   <h2 class="accordion-header">
+                    <!--create button to make the accordian content visible
+                    expanded false so it is not automatically expanded-->
                     <button class="accordion-button collapsed" 
                             type="button" 
                             data-bs-toggle="collapse" 
@@ -55,6 +65,7 @@
                       Accordion #2
                     </button>
                   </h2>
+                  <!--the content that will be visible when button above if clicked -->
                   <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#myFirstAccordion">
                     <div class="accordion-body">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quae quis culpa itaque ipsa debitis, 
@@ -62,8 +73,11 @@
                     </div>
                   </div>
                 </div>
+                <!--create third accordian collapse-->
                 <div class="accordion-item">
                   <h2 class="accordion-header">
+                    <!--create button to make the accordian content visible
+                    expanded false so it is not automatically expanded-->
                     <button class="accordion-button collapsed" 
                             type="button" 
                             data-bs-toggle="collapse" 
@@ -73,6 +87,7 @@
                       Accordion #3
                     </button>
                   </h2>
+                  <!--the content that will be visible when button above if clicked -->
                   <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#myFirstAccordion">
                     <div class="accordion-body">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, minima aspernatur! Tenetur sapiente eos 
@@ -83,6 +98,7 @@
                 </div>
               </div>
         </main>
+        <!--make a footer with the title centered-->
         <footer class="footer bg-light mt-auto">
             <h4 class="text-center">Footer Info</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
