--- a/03-Bootstrap/assignment/grid-page.html
+++ b/03-Bootstrap/assignment/grid-page.html
@@ -8,6 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Assignment 06 - Bootstrap 4 - grid</title>
     </head>
+    <!--make the entire body element a flex container with a column direction
+    make the body height 100 percent of the veiwport height so the footer will be at the bottom of page-->
     <body class="d-flex flex-column min-vh-100">
         <header class="bg-light">
             <h1>Website Name</h1>
@@ -95,6 +97,7 @@
             </div>  
 
         </main>
+        <!--make a footer with the title centered-->
         <footer class="footer bg-light mt-auto">
             <h4 class="text-center">Footer Info</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
