--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -8,6 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Assignment 06 - Bootstrap 4</title>
     </head>
+    <!--make the entire body element a flex container with a column direction
+    make the body height 100 percent of the veiwport height so the footer will be at the bottom of page-->
     <body class="d-flex flex-column min-vh-100">
         <header>
             <h1>Website Name</h1>
@@ -39,8 +41,11 @@
                         debitis incidunt itaque.</p>
                 </div>
             </div>
+            <!--Create a flex contianer with cards with equal spacing between each card
+            And gave container a margin of 5 on top and bottom of container-->
             <div class="container d-flex justify-content-evenly mt-5 mb-5 flex-wrap gap-3">
-                <div class="card" style="width: 18rem;">
+              <!--each card is 18rem wid with a title, content and a link button in blue-->
+              <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">Title</h5>
                       <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, debitis.</p>
@@ -70,6 +75,7 @@
                   </div>
             </div>
         </main>
+        <!--make a footer with the title centered-->
         <footer class="footer bg-light mt-auto">
             <h4 class="text-center">Footer Info</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, incidunt maiores eos quis quo cupiditate 
