added routes with comments

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -7,8 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <!-- Use id=app to call the content in vue -->
     <div id="app">
-      
+
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
