--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- Use id=app to call the content in vue -->
     <div id="app">
 
